// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddBrickModal renders 1`] = `
<DocumentFragment>
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade root modal show"
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-xl modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="header modal-header"
        >
          <div
            class="title modal-title h4"
          >
            Add Brick
          </div>
          <div
            class="searchContainer"
          >
            <div
              class="root searchInput"
            >
              <input
                class="input"
                data-testid="tag-search-input"
                name="brickSearch"
                placeholder="Search"
                value=""
              />
            </div>
          </div>
          <button
            class="close closeButton"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
            <span
              class="sr-only"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="body modal-body"
        >
          <div
            class="tagList"
          >
            <div
              class="root"
            >
              <button
                class="item itemActive"
                data-testid="search-tag-item-All Categories"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 All Categories
              </button>
              <button
                class="item"
                data-testid="search-tag-item-Tag 1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 Tag 1
              </button>
              <button
                class="item"
                data-testid="search-tag-item-Tag 2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 Tag 2
              </button>
              <button
                class="item"
                data-testid="search-tag-item-Tag 3"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 Tag 3
              </button>
            </div>
          </div>
          <div
            class="brickResults"
          >
            <div
              style="position: relative; height: 600px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
            >
              <div
                style="height: 89px; width: 600px;"
              >
                <div
                  style="position: absolute; left: 0px; top: 0px; height: 89px; width: 300px;"
                >
                  <div
                    class="root"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="content"
                    >
                      <div
                        class="nameRow"
                      >
                        <img
                          alt="Icon"
                          class="imageIcon size1"
                          src="https://marketplace.dev/1"
                        />
                        <span
                          class="name"
                        >
                          Echo Brick
                        </span>
                      </div>
                      <small
                        class="text-muted font-italic"
                      >
                        No description provided.
                      </small>
                    </div>
                    <button
                      class="addButton btn btn-primary"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-plus fa-w-14 "
                        data-icon="plus"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 448 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                          fill="currentColor"
                        />
                      </svg>
                       Add
                    </button>
                  </div>
                </div>
                <div
                  style="position: absolute; left: 300px; top: 0px; height: 89px; width: 300px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddBrickModal renders with tag selected and search query 1`] = `
<DocumentFragment>
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade root modal show"
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-xl modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="header modal-header"
        >
          <div
            class="title modal-title h4"
          >
            Add Brick
          </div>
          <div
            class="searchContainer"
          >
            <div
              class="root searchInput"
            >
              <span
                class="badge"
              >
                Tag 3 
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-times-circle fa-w-16 "
                  data-icon="times-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <input
                class="input"
                data-testid="tag-search-input"
                name="brickSearch"
                placeholder="Search"
                value="google"
              />
            </div>
          </div>
          <button
            class="close closeButton"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
            <span
              class="sr-only"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="body modal-body"
        >
          <div
            class="tagList"
          >
            <div
              class="root"
            >
              <button
                class="item"
                data-testid="search-tag-item-All Categories"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 All Categories
              </button>
              <button
                class="item"
                data-testid="search-tag-item-Tag 1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 Tag 1
              </button>
              <button
                class="item"
                data-testid="search-tag-item-Tag 2"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 Tag 2
              </button>
              <button
                class="item itemActive"
                data-testid="search-tag-item-Tag 3"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-tag fa-w-16 fa-fw "
                  data-icon="tag"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 252.118V48C0 21.49 21.49 0 48 0h204.118a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882L293.823 497.941c-18.745 18.745-49.137 18.745-67.882 0L14.059 286.059A48 48 0 0 1 0 252.118zM112 64c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48z"
                    fill="currentColor"
                  />
                </svg>
                 Tag 3
              </button>
            </div>
          </div>
          <div
            class="brickResults"
          >
            <div
              style="position: relative; height: 600px; width: 600px; overflow: auto; will-change: transform; direction: ltr;"
            >
              <div
                style="height: 0px; width: 600px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
